tests/e2e/keywords/boolean_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    boolean = 1
      ^^^^^^^

E0020: `boolean` is a reserved keyword
